# XQ_sample

./: README.md  compose.yaml  entities-generate.sh
frontend/: package-lock.json  package.json
frontend/src/_generated/: hello_grpc_pb.js  hello_pb.js
frontend/src/_generated/xq/: CoreServiceClientPb.ts  core_grpc_pb.d.ts  core_grpc_pb.js  core_pb.d.ts  core_pb.js
frontend/src/app/: page.tsx
frontend/src/app/api/: route.ts
frontend/src/components/: PostComponent.tsx  PostForm.tsx  Timeline.tsx
frontend/src/hooks/: useXQStream.ts
frontend/src/services/: xq-client.ts
grpc_backend/: Cargo.toml  build.rs
grpc_backend/.serena/: project.yml
grpc_backend/migration/: Cargo.toml
grpc_backend/migration/src/: lib.rs  m20250819_161456_create_table_users.rs  m20250819_162937_create_table_posts.rs
grpc_backend/src/: converter.rs  helloworld.rs  main.rs  xq.rs  xq_service.rs
grpc_backend/src/models/entities/: mod.rs  posts.rs  prelude.rs  users.rs
proto/xq/: core.proto
