[package]
name = "grpc_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tokio = {version = "1.47.1",features = ["macros","rt-multi-thread"]}
tonic = "0.14.1"
tonic-prost = "0.14.1"
tonic-web = "0.14.1"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
