[package]
name = "grpc_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.41", features = ["serde", "macros"] }
tokio = {version = "1.47.1",features = ["macros","rt-multi-thread"]}
tokio-stream = "0.1.16"
tonic = "0.14.1"
tonic-prost = "0.14.1"
tonic-web = "0.14.1"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
